--- a/style.css
+++ b/style.css
@@ -8,12 +8,8 @@
   text-decoration: line-through solid black;
 }
 
-.vermelho {
-  background-color: rgb(230 , 69 , 69);
-}
-
-.amarelo {
-  background-color: rgb(232 , 232 , 57);
+.roxo {
+  background-color: #CCC9E7;
 }
 
 .cinza {
@@ -21,44 +17,50 @@
 }
 
 body {
-  display: flex;
-  justify-content: center;
-  background-color: rgb(243 , 227 , 157);
+  background-image: url(./imagens/fundo.jpg);
 }
 
 .container {
-  width: 35%;
+  max-width: 55%;
+  margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 40px;
-  background-color: rgb(128 , 153 , 128);
-  padding: 5px 5px 10px;
+  background-color: #2E3138;
+  padding: 10px;
+  border-radius: 6px;
+  box-shadow: rgba(255, 255, 255, 0.2) 0px 2px 8px 0px;
 }
 
 h1 {
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 40px;
+  font-size: 35px;
   border-bottom: 1px solid;
-  margin-bottom: 8px;
+  margin-bottom: 15px;
+  color: #CCC9E7;
 }
 
 p {
   font-family: Arial, Helvetica, sans-serif;
   margin-bottom: 10px;
+  color: #CCC9E7;
 }
 
 .todo {
   display: flex;
   flex-direction: column;
+  text-align: center;
 }
 
 input {
   margin-bottom: 8px;
   padding: 5px;
-  border: none;
+  border: 2px solid #8aa4c5;
   border-radius: 3px;
+  background-color: #2E3138;
+  color: #bbd0ec;
 }
 
 input:focus {
@@ -72,20 +74,58 @@ input:focus {
   margin-bottom: 8px;
 }
 
+.buttons {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.buttons div {
+  text-align: center;
+}
+
 .buttons button {
   padding: 4px;
-  margin: 0 2px;
+  margin: 0 5px 5px 0;
+  background-color: #77a0d6;
+  border: none;
+  cursor: pointer;
+}
+
+.buttons button:hover {
+  background-color: #8aa4c5;
 }
 
 ol {
   list-style-position: inside;
-  width: 80%;
   margin: 18px auto;
+  width: 97%
 }
 
 ol li {
-  background-color: honeydew;
+  background-color: #a0b5f1;
   margin: 6px auto;
   border-radius: 4px;
   padding: 4px;
+}
+
+::-webkit-input-placeholder { /* Edge */
+  color: #bbd0ec;
+}
+
+:-ms-input-placeholder { /* Internet Explorer */
+  color: #bbd0ec;
+}
+
+::placeholder {
+  color: #bbd0ec;
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    max-width: 97%;
+  }
+  h1 {
+    font-size: 20px;
+  }
 }
